# Stammbaum

./: .gitignore  .gitmodules  README.md  create_archive.sh  fix_vendor_files_unix.sh
docs/mysql_database/: er_diagramm.dia
frontend/: README.md
scripts/formatting/: .astylerc  format_cmake_unix.sh  format_code_cpp_unix.sh  gersemi_definitions.cmake
server/: CMakeLists.txt  README.md  build_unix.sh  build_unix_clang.sh  build_unix_gcc.sh  start_mysql_database_unix.sh
server/lib_database/: CMakeLists.txt  README.md
server/lib_server/: CMakeLists.txt  README.md
server/src/: config.in.hpp  main.cpp
server/src/cli/: cli_parser.cpp  cli_parser.hpp  vendor_git_info.hpp  vendor_git_info.in.hpp
server/src/controllers/: controller_json_test.cpp  controller_json_test.hpp  controller_test.cpp  controller_test.hpp
server/src/database/: database_connect.cpp  database_connect.hpp
server/src/logging/: logging_globals.hpp
server/src/std_fix/: std_format_fix.hpp
